--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,17 +1,18 @@
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Lasagna</title>
   </head>
   <body>
     <h1>Lasagna</h1>
-    <img
-      src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2020%2F07%2F11%2Fworlds-best-lasagna.jpeg"
-    />
-    <figcaption id="description">World's Best Lasagna</figcaption>
-    <section id="lasagna-details">
+    <figure id="description">
+      <img src="../img/lasagna.jpg" />
+      <figcaption>World's Best Lasagna</figcaption>
+    </figure>
+    <section id="details">
       <h2>Ingredients needed for the recipe:</h2>
       <ul id="ingredients-list">
         <li>1/3 pound sweet Italian sausage</li>
@@ -36,8 +37,8 @@
         <li>1/4 cup grated Parmesan cheese</li>
       </ul>
     </section>
-    <section id="lasagna-details">
-      <h2>Steps</h2>
+    <section id="steps">
+      <h2>Steps:</h2>
       <ol>
         <li>
           In a Dutch oven, cook sausage, ground beef, onion, and garlic over
